# Opengl-GLFW-Setup

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/Core/: application.cpp  application.h  window.cpp  window.h
src/ECS/: ComponentStore.h  Entity.h  Scene.cpp  Scene.h  System.h
src/shader/: compute.glsl  default.vert
src/utils/: quadTree.h
src/utils/Math/: matrix.cpp  matrix.h  transform.cpp  transform.h  vector.cpp  vector.h
src/utils/Object/: VAO.cpp  VAO.h  shader.cpp  shader.h
